--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
-<bm-book-list
-  *ngIf="viewState === 'list'"
-  (showDetailsEvent)="showDetails($event)"></bm-book-list>
+<div class="ui menu">
+  <a routerLink="home" routerLinkActive="active" class="item">Home</a>
+  <a routerLink="books"routerLinkActive="active" class="item">Bücher</a>
+</div>
 
-<bm-book-details
-  *ngIf="viewState === 'details'"
-  (showListEvent)="showList()"
-  [book]="book"></bm-book-details> 
+<router-outlet></router-outlet>
 
-
-<router-outlet></router-outlet> 
