Dritte Iteration / HTTP-Kommunikation komplett

--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,12 +1,10 @@
-
 <div class="ui middle aligned selection divided list">
-  <bm-book-list-item class="item"
-    *ngFor="let b of books"
-    [book]="b" 
-    [routerLink]="b.isbn"></bm-book-list-item>  
+  <bm-book-list-item class="item" *ngFor="let b of books" [book]="b" [routerLink]="b.isbn"></bm-book-list-item>
+
+  <div *ngIf="!books" class="ui active dimmer">
+    <div class="ui large text loader">Daten werden geladen...</div>
+  </div>
+
+  <p *ngIf="books && !books.length">Es wurden noch keine Buecher eingetragen.</p>
+
 </div>
-
-<!-- Reicht ueber ein Property Binding -> [book] = "b" <- den Inhalt an die Child Component "book-list-item" weiter-->
-<!-- Reicht ueber ein Event Binding (click) ..... -->
-
-          
